Fixed spacing between buttons

--- a/src/styles/Collections.css
+++ b/src/styles/Collections.css
@@ -10,6 +10,7 @@
     color: var(--button-color);
     padding-left: 10px;
     padding-right: 10px;
+    margin: 0;
 }
 
 .localCollections {
